--- a/page4.html
+++ b/page4.html
@@ -21,15 +21,21 @@
                 <div class="b-social_wrapper">
                     <article class="b-article m-columns m-two_column">
                         <div class="b-article_column">
-                            <p class="b-article_date lightgrey">
+                            <p class="b-article_date lightgrey m-bglightgrey">
                                 26.03.2014
                             </p>
                             <h4 class="b-article_title deepred m-size30">
                                 День профориентации
                             </h4>
                             <p class="b-article_summary grey m-size30">
-                                23 марта рекламные агент&shy;ства “Nectarin” и “Umbrella”
-                                провели день профориента&shy;ции для ребят из детских домов.
+                                <span class="m-highlighter m-bgblack">
+                                    <span class="m-highlighter m-bgblack">
+                                        <span class="m-highlighter m-bgblack">
+                                            23 марта рекламные агент&shy;ства “Nectarin” и “Umbrella”
+                                            провели день профориента&shy;ции для ребят из детских домов.
+                                        </span>
+                                    </span>
+                                </span>
                             </p>
                             <p class="b-article_sub darkgrey m-size30">
                                 Как известно, профессию надо выбирать еще в детстве.
@@ -61,12 +67,90 @@
                                 что обнаружил в офисе симулятор гоночного автомобиля.
                             </p>
                         </div>
+                        <div class="b-article_resume m-smile m-size20 deepred">
+                            Тренинг прошел на отлично  – многие из ребят определились со своей будущей профессией.
+                            Но главное – все они получили уникальные знания от уже состоявшихся профессионалов.
+                        </div>
                     </article>
                 </div>
 
             </section>
             <section class="b-social_page-footer">
+                <div class="b-social_wrapper">
+                    <div class="b-footer-slider">
+                        <div class="b-footer-slider_wrapper">
+                            <div class="b-footer_article m-current_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    ДЕНЬ ПРОФОРИЕНТАЦИИ
+                                    В АГЕНТСТВЕ "NECTARIN"
+                                </h4>
 
+                            </div>
+                            <div class="b-footer_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    ПРЕДПРЕМЬЕРНЫЙ
+                                    ПОКАЗ
+                                </h4>
+
+                            </div>
+                            <div class="b-footer_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    ЕЛКА ТОЖЕ
+                                    ХОЧЕТ ЖИТЬ
+                                </h4>
+
+                            </div>
+                            <div class="b-footer_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    ЕЛКА ТОЖЕ
+                                    ХОЧЕТ ЖИТЬ
+                                </h4>
+
+                            </div>
+                            <div class="b-footer_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    День профориентации
+                                </h4>
+
+                            </div>
+                            <div class="b-footer_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    День профориентации
+                                </h4>
+
+                            </div>
+                            <div class="b-footer_article">
+                                <p class="b-article_date lightgrey m-size13">
+                                    26.03.2014
+                                </p>
+                                <h4 class="b-article_title lightgrey m-size14">
+                                    День профориентации
+                                </h4>
+
+                            </div>
+                        </div>
+                    </div>
+                    <a class="b-footer_arrow b-footer_arrow_prev" ></a>
+                    <a class="b-footer_arrow b-footer_arrow_next" ></a>
+                </div>
             </section>
         </section>
 
